Remove unnecessary CSS classes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,27 +128,6 @@ li.active a {
   background-color: #FFC;
 }
 
-/* Form items */
-
-.form-item {
-  margin-bottom: 1em;
-} 
-.form-item .form-radio {
-  margin-bottom: -0.25em;
-} 
-.form-item .description {
-  font-size: 0.85em;
-}
-.form-item label {
-  font-weight: bold;
-}
-.form-item label.option {
-  font-weight: normal;
-}
-.form-reset .form-submit {
-  margin: 0.5em 0;
-}
-
 .scoretable td {
 	border: 1px solid gray;
 }
@@ -269,19 +248,25 @@ input:focus, textarea:focus  { background:#ffc; }
 /* Align labels on forms */
 label {
 	display:block;
-	margin:12px 0 0;
+	margin:12px 12px 0 0;
 	font-weight:bold;
 	font-size:.9em;
 	float:left;
 	clear:left;
-	width:120px;}
+	width:130px;}
 label:after     {content:": ";}
+
+fieldset>label {
+	width:auto;
+}
+fieldset>label:after     {content:"";}
 
 select, input, textarea {
 	border:1px solid #ccc;
 	padding:5px;
-	margin:10px 10px 0 0;
+	margin:12px 12px 0 0;
 }
+.labeldata { padding:10px;  margin:12px 12px 0 0; }
 
 .description { font-size: 0.85em; }
 
