Feature: can add notes to players and teams.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,6 +20,10 @@ fieldset fieldset {
 	font-weight:    bold;
 }
 
+.baretable td:first-child {
+	font-weight:	normal;
+}
+
 .listtable th {
 	background-color:    black;
 	color:               white;
