Show region and rank in sorted field list

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -269,3 +269,14 @@ select, input, textarea {
 
 .description { font-size: 0.85em; }
 
+/* bsmListItem stuff is for field ranking.  It displays a leading number on the count */
+.bsmListItem {
+  counter-increment: number;
+}
+.bsmListItemLabel:before {
+   content: counter(number) " ";
+}
+
+
+
+
