--- a/src/css/style.css
+++ b/src/css/style.css
@@ -175,7 +175,7 @@ tr.region_mismatch {
 .paging_full_numbers .fg-button {
 	padding: 2px 6px;
 	cursor: pointer;
-	* cursor: hand;
+	cursor: hand;
 }
 
 .fg-toolbar {
@@ -210,7 +210,7 @@ tr.region_mismatch {
 	padding: 2px 5px;
 	margin: 0 3px;
 	cursor: pointer;
-	*cursor: hand;
+	cursor: hand;
 }
 
 .paging_full_numbers span.paginate_button {
