--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,15 +25,13 @@ fieldset fieldset {
 }
 
 .listtable th {
-	background-color:    black;
-	color:               white;
 	font-weight:         bold;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #BBB;
 	text-align: left;
 }
 
 .listtable td {
-	border-bottom: 1px solid gray;
+	border-bottom: 1px solid #BBB;
 }
 
 .listtable .subtitle {
@@ -64,10 +62,11 @@ tr.dark {
 	font-weight:         bold;
 }
 */
+
 .schedule .column-heading {
 	font-weight: bold;
 	vertical-align: bottom;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #BBB;
 }
 
 .schedule tr.dark {
@@ -78,8 +77,7 @@ tr.dark {
 .fieldlist td a { font-weight: bold }
 .fieldlist td a.closedfield { font-weight: normal; text-decoration: line-through; color: #C0C0C0; }
 
-
-/*  Override for SUC styling
+/* SUC Override
 .splash table { border-collapse: collapse; width: 100% !important; }
 .splash th { text-align: left; background-color: black; color: white;
               font-weight: bold; font-size: 9pt; }
@@ -126,11 +124,13 @@ li.active a {
 	font-weight: bold;
 }
 
+/* SUC Override
 .menu li a {
 	width: 100%;
 	text-decoration: none;
 }
-    
+*/
+
 .menu li a:hover {
   color: #000;
   background-color: #FFC;
